repsitory now is clean

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-*/venv/*
+# Ignore virtual environment files
+venv/
+
+# Ignore IDE-specific files (e.g., for JetBrains IntelliJ IDEA)
+.idea/
+".idea/"
+
+# Ignore Python cache files
+__pycache__/
